feat [ECG-13]: display old data in real-time ECG chart upon landing on the patient page